# Julie-Su

./: .gitignore  README  scripts
juliev1/: CMakeLists.txt  LICENSE.txt  svn-commit.tmp
juliev1/bot/: CMakeLists.txt  bot.cpp  bot.h  config.cpp  config.h  connection.cpp  connection.h  global.cpp  global.h  level.cpp  level.h  main.cpp  managedplugin.cpp  managedplugin.h  message.cpp  message.h  output.cpp  output.h  plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h
juliev1/config/: sample.xml
juliev1/plugins/: CMakeLists.txt
juliev1/plugins/action/: CMakeLists.txt  action.cpp  action.h
juliev1/plugins/action/source/: action.cc  action.h
juliev1/plugins/antispam/: CMakeLists.txt  antispam.cpp  antispam.h
juliev1/plugins/apt/: CMakeLists.txt  apt.cpp  apt.h
juliev1/plugins/apt/source/: portage.h
juliev1/plugins/avatar/: CMakeLists.txt  avatar.cpp  avatar.h
juliev1/plugins/bofh/: CMakeLists.txt  bofh.cpp  bofh.h
juliev1/plugins/bug/: CMakeLists.txt  bug.cpp  bug.h
juliev1/plugins/devhatdropbox/: CMakeLists.txt  devhatdropbox.h
juliev1/plugins/devhatdropbox/inotify-tools-3.13/: Makefile  config.h  config.status  configure  libtool
juliev1/plugins/devhatdropbox/inotify-tools-3.13/libinotifytools/: Makefile
juliev1/plugins/devhatdropbox/inotify-tools-3.13/libinotifytools/src/: Makefile  inotifytools.c
juliev1/plugins/devhatdropbox/inotify-tools-3.13/libinotifytools/src/inotifytools/: Makefile
juliev1/plugins/devhatdropbox/inotify-tools-3.13/man/: Makefile
juliev1/plugins/devhatdropbox/inotify-tools-3.13/src/: Makefile  inotifywait.c
juliev1/plugins/devopoly/: CMakeLists.txt  boardpiece.cpp  boardpiece.h  boardpiecetypes.h  devopoly.cpp  devopoly.h  goboardpiece.cpp  goboardpiece.h  player.cpp  player.h  propertyboardpiece.cpp  propertyboardpiece.h  propertytypes.h
juliev1/plugins/dice/: CMakeLists.txt  dice.cpp  dice.h
juliev1/plugins/dice/source/: dice.cc  dice.h
juliev1/plugins/draw/: CMakeLists.txt  draw.cpp  draw.h
juliev1/plugins/drink/: CMakeLists.txt  drink.cpp  drink.h
juliev1/plugins/drink/source/: drink.cc  drink.h
juliev1/plugins/echo/: CMakeLists.txt  echo.cpp  echo.h
juliev1/plugins/eightball/: CMakeLists.txt  eightball.cpp  eightball.h
juliev1/plugins/exec/: CMakeLists.txt  exec.cpp  exec.h
juliev1/plugins/google/: CMakeLists.txt  google.cpp  google.h
juliev1/plugins/google/source/: google.cc  google.h
juliev1/plugins/haxday/: CMakeLists.txt  haxday.cpp  haxday.h
juliev1/plugins/help/: CMakeLists.txt  help.cpp  help.h
juliev1/plugins/level/: CMakeLists.txt  level.cpp  level.h
juliev1/plugins/log/: CMakeLists.txt  log.cpp  log.h
juliev1/plugins/map/: CMakeLists.txt  map.cpp  map.h
juliev1/plugins/pastebin/: CMakeLists.txt  pastebin.cpp  pastebin.h
juliev1/plugins/pastebin/source/: pastebin.cc  pastebin.h
juliev1/plugins/phenny/: CMakeLists.txt  phenny.cpp  phenny.h
juliev1/plugins/ping/: CMakeLists.txt  ping.cpp  ping.h
juliev1/plugins/pizza/: CMakeLists.txt  pizza.cpp  pizza.h
juliev1/plugins/pizza/source/: pizza.cc  pizza.h
juliev1/plugins/portage/: CMakeLists.txt  portage.cpp  portage.h
juliev1/plugins/portage/source/: portage.cc
juliev1/plugins/quote/: CMakeLists.txt  quote.cpp  quote.h
juliev1/plugins/ragepics/: CMakeLists.txt  ragepics.cpp  ragepics.cpp~  ragepics.h  ragepics.h~
juliev1/plugins/raw/: CMakeLists.txt  raw.cpp  raw.h
juliev1/plugins/raw/source/: raw.cc  raw.h
juliev1/plugins/reload/: CMakeLists.txt  reload.cpp  reload.h
juliev1/plugins/roulette/: CMakeLists.txt  roulette.cpp  roulette.h
juliev1/plugins/roulette/source/: roulette.cc  roulette.h
juliev1/plugins/spell/: CMakeLists.txt  spell.cpp  spell.h
juliev1/plugins/stats/: CMakeLists.txt  stats.cpp  stats.h
juliev1/plugins/stats/sqlite/: database.cpp  database.h
juliev1/plugins/time/: CMakeLists.txt  time.cpp  time.h
juliev1/plugins/time/source/: time.cc  time.h
juliev1/plugins/title/: CMakeLists.txt  title.cpp  title.h
juliev1/plugins/todo/: CMakeLists.txt  todo.cpp  todo.h
juliev1/plugins/uptime/: CMakeLists.txt  uptime.cpp  uptime.h
juliev1/plugins/userinfo/: CMakeLists.txt  userinfo.cpp  userinfo.h
juliev1/plugins/version/: CMakeLists.txt  version.cpp  version.h
juliev1/plugins/vote/: CMakeLists.txt  vote.cpp  vote.h
juliev1/plugins/wall/: CMakeLists.txt  wall.cpp  wall.h
juliev1/plugins/wolfram/: CMakeLists.txt  wolfram.cpp  wolfram.h
juliev1/plugins/youtube/: CMakeLists.txt  youtube.cpp  youtube.h
juliev1/plugins/zypper/: CMakeLists.txt  zypper.cpp  zypper.h
juliev1/scripts/: create_plugin.sh  google.rb  index.html  meme.rb  o.txt  phenny.rb  quote.rb  spell.rb  title.rb  wolfram.rb  youtube.rb
juliev1/scripts/fortune/: NOTES  bofh-excuses
plugins/: CMakeLists.txt
plugins/NOTDONE-twitter/: CMakeLists.txt  devhatdropbox.cpp
